Attempt #2 at fixing mobile menu overflow

--- a/tbx/core/static/torchbox/css/_base.scss
+++ b/tbx/core/static/torchbox/css/_base.scss
@@ -20,6 +20,7 @@ body * {
 main {
   padding: 0;
   position: relative;
+  z-index: 10;
 }
 
 a {
